src/gtkscintilla.h

typedef struct _GtkScintilla			GtkScintilla;
void 		gtk_scintilla_set_undo_collection (GtkScintilla *sci, gboolean collectUndo);
void 		gtk_scintilla_set_view_white_space (GtkScintilla *sci, gint viewWS);
void 		gtk_scintilla_start_styling (GtkScintilla *sci, gint pos, gint mask);
void 		gtk_scintilla_set_use_palette (GtkScintilla *sci, gboolean usePalette);
void 		gtk_scintilla_style_clear_all (GtkScintilla *sci);
void 		gtk_scintilla_style_reset_default (GtkScintilla *sci);
void 		gtk_scintilla_set_word_chars (GtkScintilla *sci, const gchar *characters);
void 		gtk_scintilla_set_whitespace_fore (GtkScintilla *sci, gboolean useSetting, gint fore);
void 		gtk_scintilla_set_whitespace_back (GtkScintilla *sci, gboolean useSetting, gint back);
void 		gtk_scintilla_set_whitespace_size (GtkScintilla *sci, gint size);
void 		gtk_scintilla_user_list_show (GtkScintilla *sci, gint listType, const gchar *itemList);
void		gtk_scintilla_set_use_tabs (GtkScintilla *sci, gboolean useTabs);
void		gtk_scintilla_undo (GtkScintilla *sci);
void		gtk_scintilla_set_text (GtkScintilla *sci, const gchar *text);
void		gtk_scintilla_set_target_start (GtkScintilla *sci, gint pos);
gint		gtk_scintilla_visible_from_doc_line (GtkScintilla *sci, gint line);
gint		gtk_scintilla_wrap_count (GtkScintilla *sci, gint line);
void		gtk_scintilla_show_lines (GtkScintilla *sci, gint lineStart, gint lineEnd);
void		gtk_scintilla_toggle_fold (GtkScintilla *sci, gint line);
gint		gtk_scintilla_word_start_position (GtkScintilla *sci, gint pos, gboolean onlyWordCharacters);
gint		gtk_scintilla_word_end_position (GtkScintilla *sci, gint pos, gboolean onlyWordCharacters);
void		gtk_scintilla_set_wrap_mode (GtkScintilla *sci, gint mode);
void		gtk_scintilla_set_wrap_visual_flags (GtkScintilla *sci, gint wrapVisualFlags);
void		gtk_scintilla_set_wrap_visual_flags_location (GtkScintilla *sci, gint wrapVisualFlagsLocation);
void		gtk_scintilla_set_wrap_start_indent (GtkScintilla *sci, gint indent);
void		gtk_scintilla_set_wrap_indent_mode (GtkScintilla *sci, gint mode);
gint		gtk_scintilla_text_width (GtkScintilla *sci, gint style, const gchar *text);
gint		gtk_scintilla_text_height (GtkScintilla *sci, gint line);
void		gtk_scintilla_set_vscrollbar (GtkScintilla *sci, gboolean show);
void		gtk_scintilla_set_two_phase_draw (GtkScintilla *sci, gboolean twoPhase);
void		gtk_scintilla_target_from_selection (GtkScintilla *sci);
void		gtk_scintilla_word_left (GtkScintilla *sci);
void		gtk_scintilla_word_left_extend (GtkScintilla *sci);
void		gtk_scintilla_word_right (GtkScintilla *sci);
void		gtk_scintilla_word_right_extend (GtkScintilla *sci);
void		gtk_scintilla_tab (GtkScintilla *sci);
void		gtk_scintilla_visible_char_home (GtkScintilla *sci);
void		gtk_scintilla_visible_char_home_extend (GtkScintilla *sci);
void		gtk_scintilla_zoom_in (GtkScintilla *sci);
void		gtk_scintilla_zoom_out (GtkScintilla *sci);
void		gtk_scintilla_upper_case (GtkScintilla *sci);
void		gtk_scintilla_visible_char_home_wrap (GtkScintilla *sci);
void		gtk_scintilla_visible_char_home_wrap_extend (GtkScintilla *sci);
void		gtk_scintilla_set_view_eol (GtkScintilla *sci, gboolean visible);
void		gtk_scintilla_use_pop_up (GtkScintilla *sci, gboolean allowPopUp);
void		gtk_scintilla_set_zoom (GtkScintilla *sci, gint zoom);
void		gtk_scintilla_word_part_left (GtkScintilla *sci);
void		gtk_scintilla_word_part_left_extend (GtkScintilla *sci);
void		gtk_scintilla_word_part_right (GtkScintilla *sci);
void		gtk_scintilla_word_part_right_extend (GtkScintilla *sci);
void		gtk_scintilla_set_visible_policy (GtkScintilla *sci, gint visiblePolicy, gint visibleSlop);
void		gtk_scintilla_set_x_offset (GtkScintilla *sci, gint newOffset);
void		gtk_scintilla_set_x_caret_policy (GtkScintilla *sci, gint caretPolicy, gint caretSlop);
void		gtk_scintilla_set_y_caret_policy (GtkScintilla *sci, gint caretPolicy, gint caretSlop);
void		gtk_scintilla_visible_char_home_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_stuttered_page_up (GtkScintilla *sci);
void		gtk_scintilla_stuttered_page_up_extend (GtkScintilla *sci);
void		gtk_scintilla_stuttered_page_down (GtkScintilla *sci);
void		gtk_scintilla_stuttered_page_down_extend (GtkScintilla *sci);
void		gtk_scintilla_word_left_end (GtkScintilla *sci);
void		gtk_scintilla_word_left_end_extend (GtkScintilla *sci);
void		gtk_scintilla_word_right_end (GtkScintilla *sci);
void		gtk_scintilla_word_right_end_extend (GtkScintilla *sci);
void		gtk_scintilla_set_whitespace_chars (GtkScintilla *sci, const gchar *characters);
gchar*		gtk_scintilla_target_as_utf8 (GtkScintilla *sci);
void		gtk_scintilla_toggle_caret_sticky (GtkScintilla *sci);
void		gtk_scintilla_set_virtual_space_options (GtkScintilla *sci, gint virtualSpaceOptions);
void		gtk_scintilla_swap_main_anchor_caret (GtkScintilla *sci);
void		gtk_scintilla_start_record (GtkScintilla *sci);
void		gtk_scintilla_stop_record (GtkScintilla *sci);