bindings/vala/gtkscintilla-1.0.vapi

		[CCode (cname = "gtk_scintilla_set_target_start")]
		public void set_target_start (int pos);
		[CCode (cname = "gtk_scintilla_set_text")]
		public void set_text (string text);
		[CCode (cname = "gtk_scintilla_set_two_phase_draw")]
		public void set_two_phase_draw (bool twoPhase);
		[CCode (cname = "gtk_scintilla_set_undo_collection")]
		public void set_undo_collection (bool collectUndo);
		[CCode (cname = "gtk_scintilla_set_use_palette")]
		public void set_use_palette (bool usePalette);
		[CCode (cname = "gtk_scintilla_set_use_tabs")]
		public void set_use_tabs (bool useTabs);
		[CCode (cname = "gtk_scintilla_set_view_eol")]
		public void set_view_eol (bool visible);
		[CCode (cname = "gtk_scintilla_set_view_white_space")]
		public void set_view_white_space (int viewWS);
		[CCode (cname = "gtk_scintilla_set_virtual_space_options")]
		public void set_virtual_space_options (int virtualSpaceOptions);
		[CCode (cname = "gtk_scintilla_set_visible_policy")]
		public void set_visible_policy (int visiblePolicy, int visibleSlop);
		[CCode (cname = "gtk_scintilla_set_vscrollbar")]
		public void set_vscrollbar (bool show);
		[CCode (cname = "gtk_scintilla_set_whitespace_back")]
		public void set_whitespace_back (bool useSetting, int back);
		[CCode (cname = "gtk_scintilla_set_whitespace_chars")]
		public void set_whitespace_chars (string characters);
		[CCode (cname = "gtk_scintilla_set_whitespace_fore")]
		public void set_whitespace_fore (bool useSetting, int fore);
		[CCode (cname = "gtk_scintilla_set_whitespace_size")]
		public void set_whitespace_size (int size);
		[CCode (cname = "gtk_scintilla_set_word_chars")]
		public void set_word_chars (string characters);
		[CCode (cname = "gtk_scintilla_set_wrap_indent_mode")]
		public void set_wrap_indent_mode (int mode);
		[CCode (cname = "gtk_scintilla_set_wrap_mode")]
		public void set_wrap_mode (int mode);
		[CCode (cname = "gtk_scintilla_set_wrap_start_indent")]
		public void set_wrap_start_indent (int indent);
		[CCode (cname = "gtk_scintilla_set_wrap_visual_flags")]
		public void set_wrap_visual_flags (int wrapVisualFlags);
		[CCode (cname = "gtk_scintilla_set_wrap_visual_flags_location")]
		public void set_wrap_visual_flags_location (int wrapVisualFlagsLocation);
		[CCode (cname = "gtk_scintilla_set_x_caret_policy")]
		public void set_x_caret_policy (int caretPolicy, int caretSlop);
		[CCode (cname = "gtk_scintilla_set_x_offset")]
		public void set_x_offset (int newOffset);
		[CCode (cname = "gtk_scintilla_set_y_caret_policy")]
		public void set_y_caret_policy (int caretPolicy, int caretSlop);
		[CCode (cname = "gtk_scintilla_set_zoom")]
		public void set_zoom (int zoom);
		[CCode (cname = "gtk_scintilla_show_lines")]
		public void show_lines (int lineStart, int lineEnd);
		[CCode (cname = "gtk_scintilla_start_record")]
		public void start_record ();
		[CCode (cname = "gtk_scintilla_start_styling")]
		public void start_styling (int pos, int mask);
		[CCode (cname = "gtk_scintilla_stop_record")]
		public void stop_record ();
		[CCode (cname = "gtk_scintilla_stuttered_page_down")]
		public void stuttered_page_down ();
		[CCode (cname = "gtk_scintilla_stuttered_page_down_extend")]
		public void stuttered_page_down_extend ();
		[CCode (cname = "gtk_scintilla_stuttered_page_up")]
		public void stuttered_page_up ();
		[CCode (cname = "gtk_scintilla_stuttered_page_up_extend")]
		public void stuttered_page_up_extend ();
		[CCode (cname = "gtk_scintilla_style_clear_all")]
		public void style_clear_all ();
		[CCode (cname = "gtk_scintilla_style_get_back")]
		public int style_get_back (int style);
		[CCode (cname = "gtk_scintilla_style_get_bold")]
		public bool style_get_bold (int style);
		[CCode (cname = "gtk_scintilla_style_get_case")]
		public int style_get_case (int style);
		[CCode (cname = "gtk_scintilla_style_get_changeable")]
		public bool style_get_changeable (int style);
		[CCode (cname = "gtk_scintilla_style_get_character_set")]
		public int style_get_character_set (int style);
		[CCode (cname = "gtk_scintilla_style_get_eol_filled")]
		public bool style_get_eol_filled (int style);
		[CCode (cname = "gtk_scintilla_style_get_font")]
		public int style_get_font (int style, string fontName);
		[CCode (cname = "gtk_scintilla_style_get_fore")]
		public int style_get_fore (int style);
		[CCode (cname = "gtk_scintilla_style_get_hot_spot")]
		public bool style_get_hot_spot (int style);
		[CCode (cname = "gtk_scintilla_style_get_italic")]
		public bool style_get_italic (int style);
		[CCode (cname = "gtk_scintilla_style_get_size")]
		public int style_get_size (int style);
		[CCode (cname = "gtk_scintilla_style_get_underline")]
		public bool style_get_underline (int style);
		[CCode (cname = "gtk_scintilla_style_get_visible")]
		public bool style_get_visible (int style);
		[CCode (cname = "gtk_scintilla_style_reset_default")]
		public void style_reset_default ();
		[CCode (cname = "gtk_scintilla_style_set_back")]
		public void style_set_back (int style, int back);
		[CCode (cname = "gtk_scintilla_style_set_bold")]
		public void style_set_bold (int style, bool bold);
		[CCode (cname = "gtk_scintilla_style_set_case")]
		public void style_set_case (int style, int caseForce);
		[CCode (cname = "gtk_scintilla_style_set_changeable")]
		public void style_set_changeable (int style, bool changeable);
		[CCode (cname = "gtk_scintilla_style_set_character_set")]
		public void style_set_character_set (int style, int characterSet);
		[CCode (cname = "gtk_scintilla_style_set_eol_filled")]
		public void style_set_eol_filled (int style, bool filled);
		[CCode (cname = "gtk_scintilla_style_set_font")]
		public void style_set_font (int style, string fontName);
		[CCode (cname = "gtk_scintilla_style_set_fore")]
		public void style_set_fore (int style, int fore);
		[CCode (cname = "gtk_scintilla_style_set_hot_spot")]
		public void style_set_hot_spot (int style, bool hotspot);
		[CCode (cname = "gtk_scintilla_style_set_italic")]
		public void style_set_italic (int style, bool italic);
		[CCode (cname = "gtk_scintilla_style_set_size")]
		public void style_set_size (int style, int sizePoints);
		[CCode (cname = "gtk_scintilla_style_set_underline")]
		public void style_set_underline (int style, bool underline);
		[CCode (cname = "gtk_scintilla_style_set_visible")]
		public void style_set_visible (int style, bool visible);
		[CCode (cname = "gtk_scintilla_swap_main_anchor_caret")]
		public void swap_main_anchor_caret ();
		[CCode (cname = "gtk_scintilla_tab")]
		public void tab ();
		[CCode (cname = "gtk_scintilla_target_as_utf8")]
		public int target_as_utf8 (string s);
		[CCode (cname = "gtk_scintilla_target_from_selection")]
		public void target_from_selection ();
		[CCode (cname = "gtk_scintilla_text_height")]
		public int text_height (int line);
		[CCode (cname = "gtk_scintilla_text_width")]
		public int text_width (int style, string text);
		[CCode (cname = "gtk_scintilla_toggle_caret_sticky")]
		public void toggle_caret_sticky ();
		[CCode (cname = "gtk_scintilla_toggle_fold")]
		public void toggle_fold (int line);
		[CCode (cname = "gtk_scintilla_undo")]
		public void undo ();
		[CCode (cname = "gtk_scintilla_upper_case")]
		public void upper_case ();
		[CCode (cname = "gtk_scintilla_use_pop_up")]
		public void use_pop_up (bool allowPopUp);
		[CCode (cname = "gtk_scintilla_user_list_show")]
		public void user_list_show (int listType, string itemList);
		[CCode (cname = "gtk_scintilla_visible_char_home")]
		public void visible_char_home ();
		[CCode (cname = "gtk_scintilla_visible_char_home_extend")]
		public void visible_char_home_extend ();
		[CCode (cname = "gtk_scintilla_visible_char_home_rect_extend")]
		public void visible_char_home_rect_extend ();
		[CCode (cname = "gtk_scintilla_visible_char_home_wrap")]
		public void visible_char_home_wrap ();
		[CCode (cname = "gtk_scintilla_visible_char_home_wrap_extend")]
		public void visible_char_home_wrap_extend ();
		[CCode (cname = "gtk_scintilla_visible_from_doc_line")]
		public int visible_from_doc_line (int line);
		[CCode (cname = "gtk_scintilla_word_end_position")]
		public int word_end_position (int pos, bool onlyWordCharacters);
		[CCode (cname = "gtk_scintilla_word_left")]
		public void word_left ();
		[CCode (cname = "gtk_scintilla_word_left_end")]
		public void word_left_end ();
		[CCode (cname = "gtk_scintilla_word_left_end_extend")]
		public void word_left_end_extend ();
		[CCode (cname = "gtk_scintilla_word_left_extend")]
		public void word_left_extend ();
		[CCode (cname = "gtk_scintilla_word_part_left")]
		public void word_part_left ();
		[CCode (cname = "gtk_scintilla_word_part_left_extend")]
		public void word_part_left_extend ();
		[CCode (cname = "gtk_scintilla_word_part_right")]
		public void word_part_right ();
		[CCode (cname = "gtk_scintilla_word_part_right_extend")]
		public void word_part_right_extend ();
		[CCode (cname = "gtk_scintilla_word_right")]
		public void word_right ();
		[CCode (cname = "gtk_scintilla_word_right_end")]
		public void word_right_end ();
		[CCode (cname = "gtk_scintilla_word_right_end_extend")]
		public void word_right_end_extend ();
		[CCode (cname = "gtk_scintilla_word_right_extend")]
		public void word_right_extend ();
		[CCode (cname = "gtk_scintilla_word_start_position")]
		public int word_start_position (int pos, bool onlyWordCharacters);
		[CCode (cname = "gtk_scintilla_wrap_count")]
		public int wrap_count (int line);
		[CCode (cname = "gtk_scintilla_zoom_in")]
		public void zoom_in ();
		[CCode (cname = "gtk_scintilla_zoom_out")]
		public void zoom_out ();
	}
	[Compact]
	[CCode (cheader_filename = "gtkscintilla-1.0.h")]
	public class Class {
		public weak GLib.Callback auto_completion_cancelled;
		public weak GLib.Callback auto_completion_char_deleted;
		public weak GLib.Callback auto_completion_selection;
		public weak GLib.Callback call_tip_click;
		public weak GLib.Callback char_added;
		public weak GLib.Callback double_click;
		public weak GLib.Callback dwell_end;
		public weak GLib.Callback dwell_start;
		public weak GLib.Callback hot_spot_click;
		public weak GLib.Callback hot_spot_double_click;
		public weak GLib.Callback indicator_click;
		public weak GLib.Callback indicator_release;
		public weak GLib.Callback key;
		public weak GLib.Callback macro_record;
		public weak GLib.Callback margin_click;
		public weak GLib.Callback modified;
		public weak GLib.Callback modify_attempt_ro;
		public weak GLib.Callback need_shown;
		public weak GLib.Callback painted;
		public weak GLib.Callback save_point_left;
		public weak GLib.Callback save_point_reached;
		public weak GLib.Callback style_needed;
		public weak GLib.Callback update_ui;
		public weak GLib.Callback uri_dropped;
		public weak GLib.Callback user_list_selection;
		public weak GLib.Callback zoom;
	}
	[Compact]
	[CCode (cheader_filename = "gtkscintilla-1.0.h")]
	public class Sci_SurfaceID {
	}
	[Compact]
	[CCode (cheader_filename = "gtkscintilla-1.0.h")]
	public class ScintillaClass {
		public weak GLib.Callback command;
		public weak GLib.Callback notify;
	}
	[Compact]
	[CCode (cheader_filename = "gtkscintilla-1.0.h")]
	public class ScintillaObject {
		public weak Gtk.Container cont;
		public void* pscin;
	}
	[Compact]
	[CCode (cheader_filename = "gtkscintilla-1.0.h")]
	public class sptr_t {
	}
	[Compact]
	[CCode (cheader_filename = "gtkscintilla-1.0.h")]
	public class uptr_t {
	}
	[CCode (cprefix = "GTK_SCINTILLA_ANNOTATION_VISIBLE_", has_type_id = false, cheader_filename = "gtkscintilla-1.0.h")]
	public enum AnnotationVisible {
		HIDDEN,
		STANDARD,
		BOXED
	}
	[CCode (cprefix = "GTK_SCINTILLA_CARET_POLICY_", has_type_id = false, cheader_filename = "gtkscintilla-1.0.h")]
	public enum CaretPolicy {
		SLOP,
		STRICT,
		JUMPS,
		EVEN
	}
	[CCode (cprefix = "GTK_SCINTILLA_CARET_STICKY_", has_type_id = false, cheader_filename = "gtkscintilla-1.0.h")]
	public enum CaretSticky {
		OFF,
		ON,
		WHITESPACE
	}
